Added parchment documentation mappingfiles, created a few corn classes to experiment with

--- a/FarmingCode/src/main/resources/assets/farmhand/lang/en_us.json
+++ b/FarmingCode/src/main/resources/assets/farmhand/lang/en_us.json
@@ -6,5 +6,7 @@
   "block.farmhand.corn_middle": "Corn Middle",
   "block.farmhand.corn_top": "Corn Top",
 
+  "block.farmhand.corn_crop": "Corn Crop",
+
   "itemGroup.farmhandcropstab": "Farmhand Crops"
 }
